Display every place one on another

--- a/views/home.pug
+++ b/views/home.pug
@@ -5,4 +5,7 @@ html(lang="en")
 
   body
     h1 The best Tours in Lisbon
-      p #{allTrips}
+      div
+        ul
+          each trip in allTrips
+            li= trip
